# jitsi

./: .classpath  .cvsignore  .editorconfig  .gitattributes  .gitignore  .project  CONTRIBUTING.md  Jitsi Fork  README.md  Where to file issues  build.gradle  build.xml  build.xml.damencho  contactlist.xml.backup  gradle.properties  jitsi-desktop.doap  jitsi.eml  jitsi.ipr  lombok.config  pom.xml  project.libs.library  run-build.sh  settings.gradle
debian/: changelog  control  copyright  jitsi.install  jitsi.links  jitsi.manpages  jitsi.poms  libjitsi-jni.poms  libjitsi-ver.sh  maven.ignoreRules  maven.rules  rules
doc/: .cvsignore  AssigningAddressPreferences.sxi
docs/: building.md  hacking.md
lib/: .cvsignore  .project  accounts.properties.template  felix-5.6.8-jdk9.patch  felix-dev.properties  felix-test.properties  felix.client.run.properties  felix.client.run.properties.rss  felix.unit.test.properties  jitsi-defaults.properties  logback.xml  logging.properties  oscar.client.run.properties  oscar.unit.test.properties  testing.properties  testing.properties.template  xalan-2.6.0.jar.ant
m2/: pom.xml
native/: .gitignore  CMakeLists.txt  build.xml
native/addrbook/: AddrBookContactQuery.c  CMakeLists.txt
native/addrbook/macosx/: CMakeLists.txt  Makefile  net_java_sip_communicator_plugin_addrbook_macosx_MacOSXAddrBookContactQuery.m  net_java_sip_communicator_plugin_addrbook_macosx_MacOSXAddrBookContactSourceService.h
native/addrbook/msoutlook/: CMakeLists.txt  Logger.cxx  Logger.h  MAPIBitness.cxx  MAPINotification.cxx  MAPINotification.h  MAPISession.cxx  MAPISession.h  MsOutlookAddrBookContactQuery.cxx  MsOutlookAddrBookContactQuery.h  MsOutlookAddrBookContactSourceService.cxx  MsOutlookCalendar.h  MsOutlookDll.cxx  MsOutlookDll.h  MsOutlookMAPIHResultException.cxx  MsOutlookUtils.cxx  MsOutlookUtils.h  jmsoutlookaddrbook.rc  net_java_sip_communicator_plugin_addrbook_msoutlook_MsOutlookAddrBookContactQuery.cxx  net_java_sip_communicator_plugin_addrbook_msoutlook_MsOutlookAddrBookContactQuery.h  net_java_sip_communicator_plugin_addrbook_msoutlook_MsOutlookAddrBookContactSourceService.cxx
native/addrbook/msoutlook/com/: CMakeLists.txt  ClassFactory.cxx  ComClient.cxx  ComClient.h  IMsOutlookAddrBookClient.h  MsOutlookAddrBookClient.cxx  MsOutlookAddrBookClient.h  MsOutlookAddrBookServer.cxx  MsOutlookAddrBookServer.h  Resources32.rc  Resources64.rc  TypeLib.cxx  TypeLib.h  jmsoutlookaddrbookcomserver.rc
native/addrbook/msoutlook/com/server/: Server.cxx
native/cmake/: FindDBus.cmake  FindIDL.cmake  FindSparkle.cmake
native/globalshortcut/: CMakeLists.txt  globalshortcut.rc  net_java_sip_communicator_impl_globalshortcut_NativeKeyboardHook.cc
native/hid/: CMakeLists.txt  KeyboardUtil_windows.c  hid.rc  net_java_sip_communicator_impl_hid_NativeKeyboard.c  net_java_sip_communicator_impl_hid_NativeKeyboard.h
native/linux/galagonotification/: CMakeLists.txt  net_java_sip_communicator_impl_galagonotification_GalagoNotification.c
native/linux/libjmf_alsa/: build.sh  net_java_sip_communicator_impl_media_protocol_alsa_AlsaStream.c
native/macosx/: CMakeLists.txt
native/macosx/launcharghandler/: CMakeLists.txt
native/macosx/launcher/: CMakeLists.txt  launcher.m
native/macosx/sparkle/: CMakeLists.txt  Makefile  net_java_sip_communicator_impl_sparkle_SparkleActivator.m
native/sysactivity/: CMakeLists.txt  net_java_sip_communicator_impl_sysactivity_SystemActivityNotifications.c  net_java_sip_communicator_impl_sysactivity_SystemActivityNotifications.cpp  net_java_sip_communicator_impl_sysactivity_SystemActivityNotifications.h  sysactivity.rc
native/windows/: CMakeLists.txt
native/windows/LocalhostRetriever/: Makefile  Makefile.gcc
native/windows/cleansweep/: CMakeLists.txt
native/windows/cleansweep/include/: cleansweep.h
native/windows/cleansweep/src/: cleansweep.c  cleansweep.rc
native/windows/msofficecomm/: CMakeLists.txt  ClassFactory.cxx  ConnectionPoint.h  DMessengerEventsConnectionPoint.h  IWeakReference.cxx  IWeakReferenceSource.cxx  IWeakReferenceSource.h  Log.cxx  Log.h  Messenger.cxx  MessengerClassFactory.cxx  MessengerClassFactory.h  MessengerContacts.cxx  MessengerService.cxx  MessengerServices.h  OutOfProcessServer.cxx  UnknownImpl.h  WeakReference.h  msofficecomm.rc  msofficecomm.vcxproj  net_java_sip_communicator_plugin_msofficecomm_Messenger.h  net_java_sip_communicator_plugin_msofficecomm_OutOfProcessServer.h
native/windows/run/: CMakeLists.txt
native/windows/run/include/: run.h
native/windows/run/src/: run.c  run.rc
native/windows/setup/: CMakeLists.txt  Makefile
native/windows/setup/include/: lasterror.h  posixcompatibility.h  setup.h
native/windows/setup/src/: lasterror.c  setup.c  setup.rc
native/windows/shared/: CMakeLists.txt  config.h.in
native/windows/shared/include/win_shared/: asInvoker.exe.manifest  nls.h  registry.h
native/windows/shared/src/: nls.c  registry.c
nbproject/: ide-file-targets.xml  ide-targets.xml  project.properties  project.xml
release/: .cvsignore
resources/: application.properties  deb-build.sh  deb-gen-source.sh  deb-prepare.sh  dput-jitsi-desktop.cf  gpg-wrap.sh  jitsi-desktop-key.asc  login.properties  lookandfeel.properties  mac-cmake.sh  sbuild-tmpfs  sbuildrc  version.sh
scripts/: jicofo.sh  jitsi-videobridge.sh
snap/: snapcraft.yaml
src/: .cvsignore
src/native/libjunbound/: configure.ac  make-linux.sh  make-mac.sh  makefile.linux  makefile.w32  makefile.w64  readme.txt  unbound.patch
src/native/libjunbound/src/: Makefile.am  net_java_sip_communicator_impl_dns_UnboundApi.cpp  net_java_sip_communicator_impl_dns_UnboundApi.h  net_java_sip_communicator_impl_dns_UnboundApi_UnboundCallback.h  net_java_sip_communicator_util_dns_UnboundApi.cpp  net_java_sip_communicator_util_dns_UnboundApi.h  net_java_sip_communicator_util_dns_UnboundApi_UnboundCallback.h
src/native/libjunbound/windows32/: unbound.h
src/native/libjunbound/windows64/: unbound.h
src/native/windows/run/: CMakeLists.txt  Makefile  registry.c  registry.h  run.c  run.h  run.rc
web-start/: index.html  (+3 more)
(+6872 files in other folders)
